# rightmove-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  STATUS.md  pyproject.toml  smithery.yaml
src/rightmove_mcp/: __init__.py  apify_mode.py  server.py  tools.py
tests/: test_rightmove_agent_tools.py  test_rightmove_apify_mode.py  test_rightmove_delta_tools.py  test_rightmove_mcp_tools.py
tests/fixtures/: agent_hockeys_cambridge_2026-04.html  detail_173261858_2026-04.html  search_cambridge_2026-04.html  torent_cambridge_2026-04.html
