[project]
name = "rightmove-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing Rightmove UK property listings to AI assistants."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Kubilay Yavuz" }]
keywords = ["mcp", "rightmove", "property", "uk", "claude", "anthropic"]

dependencies = [
    "uk-property-scrapers>=0.1.0",
    "uk-property-listings>=0.1.0",
    "uk-property-apify-client>=0.1.0",
    "uk-property-apify-shared[crawler]>=0.1.0",
    "pydantic>=2.9",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
rightmove-mcp = "rightmove_mcp.server:run_stdio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rightmove_mcp"]

# Until uk-property-scrapers / uk-property-listings / uk-property-apify-client
# ship to PyPI, resolve from the sibling monorepo. Replace with pinned versions
# when publishing.
[tool.uv.sources]
uk-property-scrapers = { path = "../uk-property-intel/packages/scrapers", editable = true }
uk-property-listings = { path = "../uk-property-intel/packages/listings", editable = true }
uk-property-apify-client = { path = "../uk-property-intel/packages/apify_client", editable = true }
uk-property-apify-shared = { path = "../uk-property-apify/shared", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "N", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
